Added comments from Ivan.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -13,6 +13,10 @@ The sensors in a smartphone allows for reading the steps per minute and speed of
 \textit{How can this data be used and calculated upon to provide the runner with an enjoyable running experience?}
 \end{center}
 
+\Ivan{Will the app follow the users tempo or will the user follow the music?}
+\Ivan{Think about and discuss difference types of running e.g. interval.}
+\Ivan{Maybe have options to choose between 3 mode: plain (music follows user), fast (user follows music), interval or other template (user follows music of different BPM).}
+
 With a smartphone placed on their arm or in their pocket, it is difficult to navigate applications through visual feedback. Furthermore operating the smartphone while running decreases the navigability of the smartphone. \Alexander{SOURCE} 
 The runner's form should not be disrupted by navigating. 
 \Alexander{Re-write last (previous $\uparrow$) line.}
