--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -8,7 +8,7 @@ XP follow 12 principles.\Alexander{Source to Beck Book}
 These 12 principles should ease the development of high quality software.
 This is partly done by ensuring thorough testing, continuously refactoring, and efficient knowledge sharing.
 XP further encourages improving oneself and the teams as a whole.
-This is partly done by pair programming, sprint reviews, and collaborative ownership.
+This is partly done by pair programming, sprint reviews, and collective ownership.
 
 For these principles to work there are some criteria there needs to be met, some of those criteria are:
 \begin{itemize}
@@ -37,8 +37,11 @@ The adopted practices in this project are:
 \item Continuous integration
 \item 40-hour Work Week
 \end{itemize}
+\Ivan{Not sure it is a good idea to cut practices. Its free to use them all.}
+\Ivan{We are so close to using all of XP, why not go all the way.}
 
 \paragraph{Testing} will be implemented by writing unit tests and acceptance tests before writing any production code. After the tests and production code is written, they will be run frequently to ensure that everything is working as it is specified, especially after adding new features to the system.
+\Ivan{Acceptance test not a part of coding process.}
 
 \paragraph{Refactoring} will be implemented by team members making changes where they are needed. Also, code standards will be discussed and adhered to. Pair Programing also aids refactoring since two people programming together will be more likely to have the courage to refactor difficult pieces of code. The Testing practice also aids in this since tests can be run after refactoring which lessens the possibility of the code breaking.
 
@@ -68,10 +71,16 @@ This way of reporting individual estimates may influence the estimation of other
  \Alexander{Explained p.157, Planning game not necessary four teams of 3-4 developers.}
  
 
-\paragraph{Metaphors} have not been implemented, since we find the product simple enough to understand without any metaphors. 
+\paragraph{Metaphors} have not been implemented, since we find the product simple enough to understand without any metaphors.
+\Ivan{Not an argument!}
+\Ivan{Our goals written in problem statement is very close to a metaphor.}
+\Ivan{Etc. the word `pace' is used as a metaphor in both problem statement and code.}
+\Ivan{To have a clear definition of the product would greatly benefit the product.}
 
 \paragraph{On-site Costumer} have not been possible to implement, since we do not have a costumer. We have therefore decided to act as our own on-site costumer.
 \Alexander{Should be re-written!}
+\Ivan{We should follow extreme programming in an extreme way - we use it all, but modify single practices to fit our project.}
 
 \paragraph{Coding Standards} have not been implemented. Although general guidelines are adhered to.
 \Alexander{Should be elaborated upon.}
+\Ivan{Is used to improve collective ownership, refactoring. Formal code standard vs. informal code standard build from experience working together. So in short we use it.}
