Changed title for frontpage.

--- a/Content/FrontPage/frontpage.tex
+++ b/Content/FrontPage/frontpage.tex
@@ -14,7 +14,7 @@
 %\vspace{1cm}
 \includegraphics[width=\textwidth]{Images/frontpage.jpg}
 \vspace{1.5cm} \\
-\textsc{\Large Intelligent Music with Peer-to-Peer Sharing \\
+\textsc{\Large Tempo Player - The music player that fits YOUR tempo \\
 P8 Project\\
 Group SW802F15\\
 Software\\
