Changed title in titlepage.

--- a/Content/TitlePage/titlepage.tex
+++ b/Content/TitlePage/titlepage.tex
@@ -20,7 +20,7 @@
 			\parbox{7cm}{
 				\begin{description}
 					\item {\textbf{Title:}} \\
-						Intelligent Music with Peer-To-Peer Sharing\\
+						Tempo Player - The music player that fits YOUR tempo\\
 					
 					\item {\textbf{Subject:}} \\
 						Mobile Systems\\	
