Rewritten problem statement and solved Ivan todos.
Futher added one article to bibliography and added .pdfs of the two
articles used in problem statement.

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -50,6 +50,20 @@ URL = {http://dx.doi.org/10.1080/00140130600899104},
 eprint = {http://dx.doi.org/10.1080/00140130600899104}
 }
 
+@article{musicNoPerformanceEffect,
+author = {Yamamoto, T. and Ohkuwa, T. and Itoh, H. and Kitoh, M. and Terasawa, J. and Tsuda, T. and Kitagawa, S. and Sato, Y.},
+title = {Effects of Pre-exercise Listening to Slow and Fast Rhythm Music on Supramaximal Cycle Performance and Selected Metabolic Variables},
+journal = {Archives Of Physiology And Biochemistry},
+volume = {111},
+number = {3},
+pages = {211-214},
+year = {2003},
+doi = {10.1076/apab.111.3.211.23464},
+note ={PMID: 14972741},
+URL = {http://dx.doi.org/10.1076/apab.111.3.211.23464},
+eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
+}
+
 @book{xp:planning,
  author = {Beck, Kent and Fowler, Martin},
  title = {Planning Extreme Programming},
