--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -3,24 +3,43 @@ Running is a popular form of exercise, however it can be a tedious and uninspiri
 To improve the experience, \citet{musicRunEffectArticle} found that 
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
-It was further discovered by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
-They discovered that the running speed, while listening to relatively slow music, was slower than when not listening to music. Additionally listening to fast-paced music resulted in a faster running speed, compared to when not listening to music.
+It was further concluded by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
+They concluded that the running pace for novice runners, while listening to relatively low-tempo music, was slower than when not listening to music. Additionally listening to high-tempo music resulted in a faster running pace, compared to when not listening to music.
 
-Today many runners use their smartphone as a music player, which can either be placed on their arm or in their pocket.
-The sensors in a smartphone allows for reading the steps per minute and speed of the runner.
+This conclusion is however in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggest, that ``... music had no impact on mean power output''.
+
+Given this controversy we can not definitely conclude whether different types of music will effect the running experience differently. 
+However by adhering to \citet{musicRunEffectArticle}'s conclusion, we can only improve the running experience, since \citet{musicNoPerformanceEffect} concludes there can be no negative impact, by playing music.
+
+Today many runners use their smartphone as a music player, which can either be placed in their hand, pocket, or on their arm.
+The sensors in a smartphone allows for reading the pace and speed of the runner.
+From this knowledge we can state the first problem:
 
 \begin{center}
-\textit{How can this data be used and calculated upon to provide the runner with an enjoyable running experience?}
+\textit{How can we provide music of appropriate tempo, compared to the current pace, to the runner through a smartphone?}
 \end{center}
 
+%Second Problem - UI%
+Operating a smartphone while running is difficult, especially if it is placed in the pocket or on the arm of the runner.
+In order for the runner to operate the smartphone as desired, the runner would have to stop running, or focus incredibly  hard, which can disrupt the runner's form, which can lead to injuries and accidents.
+
+From this knowledge we can state the second problem: 
+
+\begin{center}
+\textit{How can a smartphone application be operated without disrupting the runner's form or concentration?}
+\end{center}
+
+\pagebreak
+\Ivan{First problem:}
 \Ivan{Will the app follow the users tempo or will the user follow the music?}
+\Alexander{It is now clear that the application should follow the pace of the user.}
 \Ivan{Think about and discuss difference types of running e.g. interval.}
+\Alexander{Upon reflection we have decided to `move' the training program problem, since it is very trivial when the stated problem is solved.}
 \Ivan{Maybe have options to choose between 3 mode: plain (music follows user), fast (user follows music), interval or other template (user follows music of different BPM).}
+\Alexander{We have chosen not to focus on these given controversy, lack of complexity and interest.}
 
-With a smartphone placed on their arm or in their pocket, it is difficult to navigate applications through visual feedback. Furthermore operating the smartphone while running decreases the navigability of the smartphone. \Alexander{SOURCE} 
-The runner's form should not be disrupted by navigating. 
-\Alexander{Re-write last (previous $\uparrow$) line.}
+\Ivan{Second problem:}
 
-\begin{center}
-\textit{How can a smartphone application be operated without disrupting the runner's form?}
-\end{center}
+
+
+\Alexander{BPM error deviation = 7.5 BPM - \url{http://www.cs.virginia.edu/~stankovic/psfiles/MusicalHeart-SenSys2012-CameraReady.pdf}}
