Added clarification of todos in problem statement.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -41,5 +41,5 @@ From this knowledge we can state the second problem:
 \Ivan{Second problem:}
 
 
-
+\Alexander{General notes:}
 \Alexander{BPM error deviation = 7.5 BPM - \url{http://www.cs.virginia.edu/~stankovic/psfiles/MusicalHeart-SenSys2012-CameraReady.pdf}}
