corrections for problem statement

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -1,29 +1,29 @@
 \section{Problem Statement}
-Running is a popular form of exercise, however it can be a tedious and uninspiring endeavour.
+Running is a popular form of exercise, however, it can be a tedious and uninspiring endeavour.
 To improve the experience, \citet{musicRunEffectArticle} found that 
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
 It was further concluded by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
 They concluded that the running pace for novice runners, while listening to relatively low-tempo music, was slower than when not listening to music. Additionally listening to high-tempo music resulted in a faster running pace, compared to when not listening to music.
 
-This conclusion is however in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggest, that ``... music had no impact on mean power output''.
+This conclusion is in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggests, that ``... music had no impact on mean power output''.
 
-Given this controversy we can not definitely conclude whether different types of music will effect the running experience differently. 
+As a result, we can not definitively conclude whether music of different tempos will affect the running experience differently. 
 However by adhering to \citet{musicRunEffectArticle}'s conclusion, we can only improve the running experience, since \citet{musicNoPerformanceEffect} concludes there can be no negative impact, by playing music.
 
 Today many runners use their smartphone as a music player, which can either be placed in their hand, pocket, or on their arm.
-The sensors in a smartphone allows for reading the pace and speed of the runner.
-From this knowledge we can state the first problem:
+The sensors in a smartphone enable reading the pace and speed of the runner.
+From this knowledge the first problem can be stated:
 
 \begin{center}
-\textit{How can we provide music of appropriate tempo, compared to the current pace, to the runner through a smartphone?}
+\textit{How can we provide music with an appropriate tempo, compared to the current pace, to the runner through a smartphone?}
 \end{center}
 
 %Second Problem - UI%
 Operating a smartphone while running is difficult, especially if it is placed in the pocket or on the arm of the runner.
-In order for the runner to operate the smartphone as desired, the runner would have to stop running, or focus incredibly  hard, which can disrupt the runner's form, which can lead to injuries and accidents.
+In order for the runner to operate the smartphone properly, the runner would have to stop running, or focus more than normally, which can disrupt the runner's form, which can lead to injuries and accidents.
 
-From this knowledge we can state the second problem: 
+From this knowledge the second problem can be stated: 
 
 \begin{center}
 \textit{How can a smartphone application be operated without disrupting the runner's form or concentration?}
