Restructured and spell checked accelerometer tests.

--- a/Report.tex
+++ b/Report.tex
@@ -37,9 +37,9 @@
 \label{chap:methodology}
 \input{Content/Methodology/xp}
 
-\chapter{Test}
-\label{chap:test}
-\input{Content/Test/test}
+\chapter{Step Counter}
+\label{chap:stepCounter}
+\input{Content/StepCounter/stepCounter}
 
 \chapter{Conclusion}
 \label{chap:conclusion}
