--- a/Content/TitlePage/titlepage.tex
+++ b/Content/TitlePage/titlepage.tex
@@ -33,8 +33,8 @@
 			
 					\item {\textbf{Participants:}}\\
 						Alexander Drægert\\
-						Christoffer\\
-						Dan\\
+						Christoffer Nduru\\
+						Dan Petersen\\
 						Kristian Thomsen \\
 						  
 					\item {\textbf{Supervisor:}}\\
