Made qutation italic in problem statement.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -6,7 +6,7 @@ To improve the experience, \citet{musicRunEffectArticle} found that
 It was further concluded by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
 They concluded that the running pace for novice runners, while listening to relatively low-tempo music, was slower than when not listening to music. Additionally listening to high-tempo music resulted in a faster running pace, compared to when not listening to music.
 
-This conclusion is in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggests, that ``... music had no impact on mean power output''.
+This conclusion is in disagreement with the conclusion of \citet{musicNoPerformanceEffect} which suggests, that \textit{``... music had no impact on mean power output''}.
 
 As a result, we can not definitively conclude whether music of different tempos will affect the running experience differently. 
 However by adhering to \citet{musicRunEffectArticle}'s conclusion, we can only improve the running experience, since \citet{musicNoPerformanceEffect} concludes there can be no negative impact, by playing music.
