Removed solved todo.

--- a/Content/StepCounter/accelerometer.tex
+++ b/Content/StepCounter/accelerometer.tex
@@ -20,7 +20,7 @@ Although four people does not necessarily represent all people, but it is better
 We use two different types of smartphones to ensure consistency.
 \Alexander{Describe reasoning $\uparrow$}
 
-\subsubsection{Test Procedure} \Alexander{Should be rewritten}
+\subsubsection{Test Procedure}
 In order to determine the behaviour of the accelerometer in different movement patterns, we devised five tests.
 The data we will gather from each test is measurements of:
 \begin{itemize}
