--- a/Content/StepCounter/accelerometer.tex
+++ b/Content/StepCounter/accelerometer.tex
@@ -10,7 +10,7 @@ The tests of the accelerometer was performed to determine behaviour during diffe
 For the tests we had:
 \begin{itemize}
 \item Four people
-\item Two smartphone (one Samsung Galaxy Note II and one Samsung Galaxy S III)
+\item Two smartphones (one Samsung Galaxy Note II and one Samsung Galaxy S III)
 \end{itemize}
 
 We use four different people to ensure the measurement are general.
