Added Ivan todos.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -29,17 +29,23 @@ From this knowledge the second problem can be stated:
 \textit{How can a smartphone application be operated without disrupting the runner's form or concentration?}
 \end{center}
 
-\pagebreak
-\Ivan{First problem:}
-\Ivan{Will the app follow the users tempo or will the user follow the music?}
-\Alexander{It is now clear that the application should follow the pace of the user.}
-\Ivan{Think about and discuss difference types of running e.g. interval.}
-\Alexander{Upon reflection we have decided to `move' the training program problem, since it is very trivial when the stated problem is solved.}
-\Ivan{Maybe have options to choose between 3 mode: plain (music follows user), fast (user follows music), interval or other template (user follows music of different BPM).}
-\Alexander{We have chosen not to focus on these given controversy, lack of complexity and interest.}
+%\pagebreak
+%\Ivan{First problem:}
+%\Ivan{Will the app follow the users tempo or will the user follow the music?}
+%\Alexander{It is now clear that the application should follow the pace of the user.}
+%\Ivan{Think about and discuss difference types of running e.g. interval.}
+%\Alexander{Upon reflection we have decided to `move' the training program problem, since it is very trivial when the stated problem is solved.}
+%\Ivan{Maybe have options to choose between 3 mode: plain (music follows user), fast (user follows music), interval or other template (user follows music of different BPM).}
+%\Alexander{We have chosen not to focus on these given controversy, lack of complexity and interest.}
 
-\Ivan{Second problem:}
+%\Ivan{Second problem:}
 
 
-\Alexander{General notes:}
+%\Alexander{General notes:}
 \Alexander{BPM error deviation = 7.5 BPM - \url{http://www.cs.virginia.edu/~stankovic/psfiles/MusicalHeart-SenSys2012-CameraReady.pdf}}
+
+
+
+\Ivan{Write about XP}
+\Ivan{Pretty sure it is not called `form' in English.}
+\Ivan{Deliberate on what \citet{musicNoPerformanceEffect} is about.}
