--- a/Content/StepCounter/accelerometer.tex
+++ b/Content/StepCounter/accelerometer.tex
@@ -4,6 +4,7 @@ There were no libraries available for the Android API version 16, so we had to d
 \subsubsection{Test Goal}
 % why did we perform the tests?
 The tests of the accelerometer was performed to determine behaviour during different movement patterns. 
+\Ivan{Define words like `behaviour' and `movement patterns'.}
 
 \subsubsection{Test Setup}
 % how did we perform the tests
